--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,6 +4,8 @@
 	xmlns:p="http://primefaces.org/ui">
 <h:head>
 	<title>Primefaces Spotlight Demo</title>
+	<meta name="viewport"
+		content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 	<h:outputScript library="pfspdemo" name="prettyprint.js"></h:outputScript>
 	<script type="text/javascript">
 		function handleForm(xhr,status,args) {
